# codex_nightline

./: .env.example  .gitignore  Makefile  README.md  agents.md  plan.md  pyproject.toml  skills.md
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  request_id.py
backend/tests/: test_chat.py  test_gemini_generator.py  test_health.py
datasets/: schema.json  stats.json
datasets/accommodation/: homestays.json  hostels.json  hotels.json
datasets/emergency/: emergency_contacts.json  fire_stations.json  hospitals.json  pharmacies.json  police_stations.json
datasets/events/: annual_events.json  festivals.json
datasets/food/: bakeries.json  cafes.json  local_foods.json  restaurants.json  street_food.json
datasets/misc/: accessibility.json  synonyms.json  weather_advice.json
datasets/places/: attractions.json  beaches.json  churches.json  markets.json  mosques.json  museums.json  parks.json  shopping_malls.json  temples.json  viewpoints.json
datasets/shopping/: bookstores.json  electronics.json  supermarkets.json
datasets/tourism/: faq.json  hidden_gems.json  itineraries.json  local_tips.json  photography_spots.json  seasonal_guides.json
datasets/transport/: airport.json  bus_stands.json  ferry_routes.json  ferry_terminals.json  metro_routes.json  metro_stations.json  parking.json  railway_stations.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  pages.tsx  styles.css
scripts/: validate_datasets.py
(+11 files in other folders)
