[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "ask-kochi"
version = "0.1.0"
description = "Grounded local-city assistance for Kochi."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Ask Kochi contributors" }]
dependencies = [
  "fastapi>=0.136,<0.137",
  "google-genai>=1.0,<2",
  "httpx>=0.28,<1",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.12,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
